Ensure scrollbar is always visible + remove styling from RTL less

--- a/administrator/templates/isis/css/template-rtl.css
+++ b/administrator/templates/isis/css/template-rtl.css
@@ -7168,6 +7168,15 @@ body .navbar-fixed-top {
 	max-height: 500px;
 	margin: 0;
 }
+.navbar .nav > li ul::-webkit-scrollbar {
+	-webkit-appearance: none;
+	width: 7px;
+}
+.navbar .nav > li ul::-webkit-scrollbar-thumb {
+	border-radius: 4px;
+	background-color: rgba(0,0,0,0.5);
+	-webkit-box-shadow: 0 0 1px rgba(255,255,255,0.5);
+}
 .navbar .empty-nav {
 	display: none;
 }
